--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,10 @@ target 'contactapp' do
 
   pod 'react-native-onesignal', :path => '../node_modules/react-native-onesignal'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
   target 'contactappTests' do
     inherit! :search_paths
     # Pods for testing
