--- a/package.json
+++ b/package.json
@@ -8,41 +8,41 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "libphonenumber-js": "^1.7.21",
-    "md5": "^2.2.1",
+    "libphonenumber-js": "1.7.21",
+    "md5": "2.2.1",
     "react": "16.8.6",
     "react-native": "0.60.4",
-    "react-native-action-sheet": "^2.2.0",
-    "react-native-contacts": "^5.0.2",
-    "react-native-elements": "^1.1.0",
-    "react-native-firebase": "^5.5.5",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-gifted-chat": "^0.9.11",
-    "react-native-image-picker": "^1.0.2",
-    "react-native-keyboard-aware-scroll-view": "^0.8.0",
-    "react-native-loading-spinner-overlay": "^1.0.1",
-    "react-native-nav": "^2.0.2",
-    "react-native-onesignal": "^3.3.1",
-    "react-native-phone-input": "^0.2.4",
-    "react-native-popover-view": "^2.0.2",
-    "react-native-popup-menu": "^0.15.6",
-    "react-native-search-filter": "^0.1.4",
-    "react-native-segmented-control-tab": "^3.4.1",
-    "react-native-simple-toast": "^0.1.1",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-action-sheet": "2.2.0",
+    "react-native-contacts": "5.0.2",
+    "react-native-elements": "1.1.0",
+    "react-native-firebase": "5.5.5",
+    "react-native-gesture-handler": "1.3.0",
+    "react-native-gifted-chat": "0.9.11",
+    "react-native-image-picker": "1.0.2",
+    "react-native-keyboard-aware-scroll-view": "0.8.0",
+    "react-native-loading-spinner-overlay": "1.0.1",
+    "react-native-nav": "2.0.2",
+    "react-native-onesignal": "3.3.1",
+    "react-native-phone-input": "0.2.4",
+    "react-native-popover-view": "2.0.2",
+    "react-native-popup-menu": "0.15.6",
+    "react-native-search-filter": "0.1.4",
+    "react-native-segmented-control-tab": "3.4.1",
+    "react-native-simple-toast": "0.1.1",
+    "react-native-vector-icons": "6.6.0",
     "react-native-video": "4.4.4",
-    "react-navigation": "^3.11.1",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.4"
+    "react-navigation": "3.11.1",
+    "react-redux": "7.1.0",
+    "redux": "4.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/runtime": "^7.5.5",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.8.0",
-    "eslint": "^6.1.0",
-    "jest": "^24.8.0",
-    "metro-react-native-babel-preset": "^0.55.0",
+    "@babel/core": "7.5.5",
+    "@babel/runtime": "7.5.5",
+    "@react-native-community/eslint-config": "0.0.5",
+    "babel-jest": "24.8.0",
+    "eslint": "6.1.0",
+    "jest": "24.8.0",
+    "metro-react-native-babel-preset": "0.55.0",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
